[gd_scene load_steps=24 format=3 uid="uid://c5qw442h2j58x"]

[ext_resource type="Script" uid="uid://chfefcgctxgfs" path="res://scripts/world.gd" id="1_k0juu"]
[ext_resource type="Script" uid="uid://b1mlwx2ermeew" path="res://scripts/unit_button_controller.gd" id="3_2lf6f"]
[ext_resource type="PackedScene" uid="uid://b5diia6ysgo7f" path="res://scenes/ui/sorceress_button.tscn" id="3_37qwj"]
[ext_resource type="Script" uid="uid://di2vc54bfyhxx" path="res://scripts/health_bar_controller.gd" id="4_lakw3"]
[ext_resource type="Script" uid="uid://cb83cnqrn1mdl" path="res://scripts/tower_controller.gd" id="10_7t5mc"]
[ext_resource type="PackedScene" uid="uid://bx7efghlv8838" path="res://scenes/components/tower.tscn" id="10_dss4m"]
[ext_resource type="PackedScene" uid="uid://bb73en382ou55" path="res://scenes/ui/gold_ui.tscn" id="10_lakw3"]
[ext_resource type="Script" uid="uid://cd6gawiwe3tew" path="res://scripts/gold_ui_controller.gd" id="10_pm21f"]
[ext_resource type="AudioStream" uid="uid://gca5mbq56l2y" path="res://assets/music/new-gameplay-music.mp3" id="12_q5onr"]
[ext_resource type="Texture2D" uid="uid://bfvsjiqi07ask" path="res://assets/level/Elven_Land_Game_Battle_Backgrounds/PNG/game_background_4/game_background_4.png" id="17_7iits"]
[ext_resource type="Texture2D" uid="uid://dasihfr7a38ne" path="res://assets/ui/Edinnu_UI_asset_pack/Dialogue_plates/Plate (27).png" id="20_7iits"]
[ext_resource type="Texture2D" uid="uid://c4uqjskc2rhi2" path="res://assets/ui/Fantasy Minimal Pixel Art GUI by eta-commercial-free/UI/ValueBar_128x16.png" id="22_kpybi"]
[ext_resource type="Texture2D" uid="uid://bt7h26bkn1fye" path="res://assets/ui/Fantasy Minimal Pixel Art GUI by eta-commercial-free/UI/ValueRed_120x8.png" id="23_ctatt"]
[ext_resource type="Texture2D" uid="uid://ctau8isikuftv" path="res://assets/ui/Fantasy Minimal Pixel Art GUI by eta-commercial-free/UI/ValueBlue_120x8.png" id="24_ctatt"]
[ext_resource type="Script" uid="uid://dlmov35wy0lls" path="res://scripts/tower_buttons.gd" id="25_xgqkh"]
[ext_resource type="Texture2D" uid="uid://d4elu0o7mxx4a" path="res://assets/ui/Edinnu_UI_asset_pack/Target/Target (10).png" id="26_munwf"]
[ext_resource type="PackedScene" uid="uid://jfxhl0xhfhmq" path="res://scenes/controllers/gold_controller.tscn" id="26_ts3gi"]
[ext_resource type="PackedScene" uid="uid://b8hmy5ppx7uet" path="res://scenes/components/unit_spawner.tscn" id="28_0nbtd"]
[ext_resource type="PackedScene" uid="uid://cppmo7nbo2qoi" path="res://scenes/controllers/enemy_controller.tscn" id="29_37qwj"]
[ext_resource type="PackedScene" uid="uid://3yxfrprhmkm7" path="res://scenes/game_state.tscn" id="30_navra"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lf6f"]
size = Vector2(2000, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7iits"]
size = Vector2(2000, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oo54l"]
size = Vector2(2000, 20)

[node name="World" type="Node2D"]
script = ExtResource("1_k0juu")

[node name="GUI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SideBar" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_left = -800.0
offset_top = -150.0
offset_right = -800.0
offset_bottom = -150.0

[node name="TextureRect" type="TextureRect" parent="GUI/SideBar"]
layout_mode = 1
offset_right = 294.0
offset_bottom = 80.0
rotation = 1.5707964
scale = Vector2(2, 2)
texture = ExtResource("20_7iits")

[node name="UnitButtonController" type="VBoxContainer" parent="GUI/SideBar" node_paths=PackedStringArray("unit_spawner", "tower_buttons", "gold_controller")]
layout_mode = 0
offset_left = -142.0
offset_top = 26.0
offset_right = -17.0
offset_bottom = 565.0
script = ExtResource("3_2lf6f")
unit_spawner = NodePath("../../../UnitSpawner")
tower_buttons = NodePath("../../TowerButtons")
gold_controller = NodePath("../../../GoldController")

[node name="SorceressButton" parent="GUI/SideBar/UnitButtonController" instance=ExtResource("3_37qwj")]
layout_mode = 2

[node name="HealthBarController" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_lakw3")

[node name="PlayerHealthBar" type="TextureProgressBar" parent="GUI/HealthBarController"]
layout_mode = 0
offset_left = -686.0
offset_top = 475.0
offset_right = -558.0
offset_bottom = 491.0
scale = Vector2(3, 3)
value = 100.0
texture_over = ExtResource("22_kpybi")
texture_progress = ExtResource("23_ctatt")
texture_progress_offset = Vector2(4, 4)

[node name="EnemyHealthBar" type="TextureProgressBar" parent="GUI/HealthBarController"]
layout_mode = 0
offset_left = 312.0
offset_top = 471.0
offset_right = 440.0
offset_bottom = 487.0
scale = Vector2(3, 3)
value = 100.0
texture_over = ExtResource("22_kpybi")
texture_progress = ExtResource("24_ctatt")
texture_progress_offset = Vector2(4, 4)

[node name="TowerButtons" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 13.799988
offset_bottom = 10.200001
scale = Vector2(3, 3)
script = ExtResource("25_xgqkh")

[node name="PlayerTowerMidButton" type="TextureButton" parent="GUI/TowerButtons"]
layout_mode = 0
offset_left = -208.0
offset_top = 20.0
offset_right = -188.0
offset_bottom = 40.0
texture_normal = ExtResource("26_munwf")
texture_hover = ExtResource("26_munwf")

[node name="PlayerTowerTopButton" type="TextureButton" parent="GUI/TowerButtons"]
layout_mode = 0
offset_left = -175.0
offset_top = -30.0
offset_right = -155.0
offset_bottom = -10.0
texture_normal = ExtResource("26_munwf")
texture_hover = ExtResource("26_munwf")

[node name="PlayerTowerBotButton" type="TextureButton" parent="GUI/TowerButtons"]
layout_mode = 0
offset_left = -175.0
offset_top = 70.0
offset_right = -155.0
offset_bottom = 90.0
texture_normal = ExtResource("26_munwf")
texture_hover = ExtResource("26_munwf")

[node name="GoldUIController" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_pm21f")

[node name="PlayerGoldUI" parent="GUI/GoldUIController" instance=ExtResource("10_lakw3")]
layout_mode = 0
offset_left = -875.0
offset_top = 450.0
offset_right = -798.0
offset_bottom = 490.0

[node name="EnemyGoldUI" parent="GUI/GoldUIController" instance=ExtResource("10_lakw3")]
layout_mode = 0
offset_left = 750.0
offset_top = 450.0
offset_right = 827.0
offset_bottom = 490.0

[node name="GameState" parent="." instance=ExtResource("30_navra")]

[node name="GoldController" parent="." node_paths=PackedStringArray("enemy_controller", "unit_button_controller") instance=ExtResource("26_ts3gi")]
enemy_controller = NodePath("../EnemyController")
unit_button_controller = NodePath("../GUI/SideBar/UnitButtonController")

[node name="EnemyController" parent="." node_paths=PackedStringArray("unit_spawner") instance=ExtResource("29_37qwj")]
unit_spawner = NodePath("../UnitSpawner")

[node name="UnitSpawner" parent="." instance=ExtResource("28_0nbtd")]

[node name="ElvenLevel" type="Node2D" parent="."]

[node name="ElvenBattleground" type="Sprite2D" parent="ElvenLevel"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_7iits")

[node name="TowerController" type="Node2D" parent="."]
script = ExtResource("10_7t5mc")

[node name="PlayerTowerTop" parent="TowerController" instance=ExtResource("10_dss4m")]
position = Vector2(-500, -85)

[node name="PlayerTowerMid" parent="TowerController" instance=ExtResource("10_dss4m")]
position = Vector2(-600, 65)
current_lane = 1

[node name="PlayerTowerBot" parent="TowerController" instance=ExtResource("10_dss4m")]
position = Vector2(-500, 215)
current_lane = 2

[node name="EnemyTowerTop" parent="TowerController" instance=ExtResource("10_dss4m")]
position = Vector2(500, -85)
faction = 1

[node name="EnemyTowerMid" parent="TowerController" instance=ExtResource("10_dss4m")]
position = Vector2(600, 65)
faction = 1
current_lane = 1

[node name="EnemyTowerBot" parent="TowerController" instance=ExtResource("10_dss4m")]
position = Vector2(500, 215)
faction = 1
current_lane = 2

[node name="Lanes" type="Node2D" parent="."]

[node name="MiddleLane" type="StaticBody2D" parent="Lanes"]
position = Vector2(0, 150)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lanes/MiddleLane"]
shape = SubResource("RectangleShape2D_2lf6f")

[node name="TopLane" type="StaticBody2D" parent="Lanes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lanes/TopLane"]
shape = SubResource("RectangleShape2D_7iits")

[node name="BottomLane" type="StaticBody2D" parent="Lanes"]
position = Vector2(0, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lanes/BottomLane"]
shape = SubResource("RectangleShape2D_oo54l")

[node name="GameplayMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_q5onr")
autoplay = true
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]
